sel-sched: fix sel_rank_for_schedule for qsort (PR 82398)

PR rtl-optimization/82398
	* sel-sched.c (sel_rank_for_schedule): Fix check for zero
	EXPR_USEFULNESS in priority comparison.

From-SVN: r255607